--- a/src/frontend/src/Components/cameras/CameraList.scss
+++ b/src/frontend/src/Components/cameras/CameraList.scss
@@ -26,7 +26,7 @@
             margin-top: 4px;
             color: $HwyCrest;
             font-weight: 700;
-            font-size:  0.938em
+            font-size:  0.938rem;
           }
 
           img {
