--- a/src/frontend/src/Components/events/EventsTable.scss
+++ b/src/frontend/src/Components/events/EventsTable.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 table {
-  font-size: 0.875em;
+  font-size: 0.875rem;
 
   thead {
     background-color: $BC-Blue-Light;
