--- a/src/frontend/src/pages/EventsPage.scss
+++ b/src/frontend/src/pages/EventsPage.scss
@@ -11,7 +11,7 @@
     .dropdown {
       //bootstrap override
       .dropdown-toggle {
-        font-size: 0.875em;
+        font-size: 0.875rem;
 
         svg {
           margin-left: 8px;
