--- a/src/frontend/src/styles/bootstrap-customizations.scss
+++ b/src/frontend/src/styles/bootstrap-customizations.scss
@@ -84,7 +84,7 @@ $danger: $Error;
       color: $Type-Primary;
       border: none;
       border-radius: 0;
-      font-size: 0.875em;
+      font-size: 0.875rem;
 
       svg, img {
         margin-right: 8px;
