--- a/src/frontend/src/styles/typography.scss
+++ b/src/frontend/src/styles/typography.scss
@@ -10,7 +10,7 @@ body {
 }
 
 p {
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
   color: $Type-Primary;
@@ -18,23 +18,23 @@ p {
 }
 
 h1 {
-  font-size: 2.25em;
+  font-size: 2.25rem;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: 700;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 36px;
 }
 
 h4 {
-  font-size: 1.25em;
+  font-size: 1.25rem;
   font-weight: 700;
   color: $BC-Blue;
 }
@@ -54,32 +54,32 @@ ul {
 
 .label {
   color: $Type-Primary;
-  font-size: 0.875em;
+  font-size: 0.875rem;
   font-weight: 400;
 }
 
 .body {
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 400;
 }
 
 .body--large {
-  font-size: 1.125em;
+  font-size: 1.125rem;
   font-weight: 400;
 }
 
 .subtitle {
-  font-size: 1.25em;
+  font-size: 1.25rem;
   font-weight: 400;
 }
 
 .subtitle--large {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 400;
 }
 
 .display {
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 700;
 }
 
